feat(photos): support original and edited photo filtering
